<resources>
    <string name="app_name">Sportlongen</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">HOME</string>
    <string name="background">background</string>
    <string name="conditions_for_training">Conditions for training:</string>
    <string name="good">GOOD</string>
    <string name="hey_john">Hey, John.</string>
    <string name="humidity">Humidity</string>
    <string name="pollen">Risk Pollen</string>
    <string name="air_quality">Air Quality</string>
    <string name="goals">Goals</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="humidity_percent">%1$s%%</string>
    <string name="_temperature_c">%1$s°C</string>
    <string name="heart_rate">Heart rate</string>
    <string name="running">Running</string>
    <string name="_0_09_00">0:00:00</string>
    <string name="apiKeyOWMWeather">4f662e0895f1f3d9b84160db5f6fc257</string>
    <string name="apiKeyAmbee">sVhqsSVyXm8IbL4KD9xYm2Haa7vc3vIy4nVU9uWl</string>
    <string name="home_menu">Home</string>
    <string name="notifications_menu">Notifications</string>
    <string name="activity_menu">Activity</string>
    <string name="history_menu">History</string>
    <string name="profile_menu">Profile</string>
    <string name="hey_friend">Hey, friend!</string>
    <string name="greeting">Hey, %1$s.</string>
    <string name="left">left</string>
    <string name="duration_minutes">%1$s minutes</string>
    <string name="from_to">%1$s - %2$s</string>
    <string name="link_to_icon_weather">https\:\/\/openweathermap.org\/img\/wn/%1$s.png</string>
    <string name="units">metric</string>
    <string name="distance_recent_home">%1$s km</string>
    <string name="see_all"><u>See all </u></string>
    <string name="recommended_settings_from">Recommended settings from </string>
    <string name="care_provider"> care provider</string>
    <string name="duration">Duration:</string>
    <string name="duration_recommended">%1$s minutes</string>
    <string name="target_distance">Target distance:</string>
    <string name="distance_recommended">%1$s km</string>
    <string name="maximum_pace">Maximum pace:</string>
    <string name="pace_recommended">%1$s min/km</string>
    <string name="maximum_heart_rate">Maximum heart rate:</string>
    <string name="heart_rate_recommended">%1$s bpm</string>
    <string name="max_heart_beat">Max heart beat</string>
    <string name="min_km">min/km</string>
    <string name="bpm">bpm</string>
    <string name="max_pace">Max pace</string>
    <string name="minutes">minutes</string>
    <string name="km">km</string>
    <string name="duration_set">Duration</string>
    <string name="target_distance_set">Target distance</string>
    <string name="reminders_explanation">We\'ll make a small reminder 5 minutes before  your time limit, and one more time once it has been reached.</string>
    <string name="checkbox_1_text">I want to receive notifications during my activity</string>
    <string name="checkbox_2_text">I want to receive audio reminders during my activity</string>
    <string name="checkboxes_hint">These options can be later disabled on your settings page.</string>
    <string name="checkbox_3_text">I don\'t want to see this message  screen again</string>
    <string name="ask_for_inhaler_explanation">Make sure to always carry your inhaler for asthma at all times.</string>
    <string name="ask_for_inhaler_hint">It is dangerous to proceed without it.</string>
    <string name="ask_for_inhaler_checkbox_text">I don\'t want to see this message  screen again</string>
    <string name="maxLimits">max. %1$s</string>
    <string name="minLimits">min. %1$s</string>
    <string name="suffering">Suffering an asthma attack?</string>
    <string name="remain_calm">Remain calm</string>
    <string name="sit_upright">Sit upright (do not lie down) and take slow steady breaths</string>
    <string name="reach">Reach for your inhaler and follow your doctor\'s instructions.</string>
    <string name="if_you_do_not">If you do not feel better after using your inhaler or you\'re worried at any point:</string>
    <string name="call_emergency"><u>Call for emergency services.</u></string>
    <string name="want_to_continue">Do you want to continue your activity?</string>
    <string name="wait_for_better">I\'ll wait for a better moment</string>
    <string name="i_ll_continue">Yes, I\'ll continue</string>
    <string name="how_feel">How do you feel?</string>
    <string name="asthma">Asthma?</string>
    <string name="hay_fever">Hay fever?</string>
    <string name="bad">BAD</string>
    <string name="so_so">SO_SO</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="activity">activity</string>
    <string name="summary">SUMMARY</string>
    <string name="questionnaire">QUESTIONNAIRE</string>
    <string name="distance">Distance</string>
    <string name="duration_summary">Duration</string>
    <string name="avg_pace">Avg. pace</string>
    <string name="max_pace_summary">Max. pace</string>
    <string name="avg_rate">Avg. heart rate</string>
    <string name="max_rate">Max. heart rate</string>
    <string name="notes">Notes from care provider</string>
    <string name="notes_field">You will find a feedback from your care provider here</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"LOGIN"</string>
    <string name="userNameRequired">User Name is required</string>
    <string name="emailRequired">Email is required</string>
    <string name="passwordRequired">Password is required</string>
    <string name="nameRequired">First name is required</string>
    <string name="lastNameRequired">Last name is required</string>
    <string name="weightRequired">Weight is required</string>
    <string name="heightRequired">Height is required</string>
    <string name="resetCodeRequired">Reset code is required</string>
    <string name="cityCountryRequired">City and country are required</string>
    <string name="pace">Pace</string>
    <string name="login_to_your_account">LOGIN TO YOUR ACCOUNT</string>
    <string name="for_troubleshooting_contact">For troubleshooting, contact</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register">REGISTER</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="history">HISTORY</string>
    <string name="profile">PROFILE</string>
    <string name="you_don_t_have_any_activities_to_show_yet">You don\'t have activities to show yet  </string>
    <string name="terms_and_conditions">TERMS AND CONDITIONS</string>
    <string name="terms_and_conditions_text">END USER LICENSE AGREEMENT \n \nLast updated November 02, 2020 \n \nSportlongen is licensed to You (End-User) by Sportlongen located at Haarlem, Netherlands (hereinafter: Licensor), for use only under the terms of this License Agreement. \n \nBy downloading the Application from the Apple AppStore, and any update thereto (as permitted by this License Agreement), You indicate that You agree to be bound by all of the terms and conditions of this License Agreement, and that You accept this License Agreement. \n \nThe parties of this License Agreement acknowledge that Apple is not a Party to this License Agreement and is not bound by any provisions or obligations with regard to the Application, such as warranty, liability, maintenance and support thereof. Sportlongen not Apple, is solely responsible for the licensed Application and the content thereof. \n \nThis License Agreement may not provide for usage rules for the Application that are in conflict with the latest App Store Terms of Service. Sportlongen acknowledges that it had the opportunity to review said terms and this License Agreement is not conflicting with them. \n \nAll rights not expressly granted to You are reserved. \n \nSportlongen represents and warrants that the app will comply with applicable third-party terms of agreement when using licensed Application. \n \nIn Accordance with Section 9 of the \'Instructions for Minimum Terms of Developer\'s End-User License Agreement,\' Apple and Apple\'s subsidiaries shall be third-party beneficiaries of this End User License Agreement and - upon Your acceptance of the terms and conditions of this license agreement, Apple will have the right (and will be deemed to have accepted the right) to enforce this End User License Agreement against You as a third-party beneficiary thereof. \n \n14. INTELLECTUAL PROPERTY RIGHTS \nand the End-User acknowledge that, in the event of any third-party claim that the licensed Application or the End-User\'s possession and use of that licensed Application infringes on the third party\'s intellectual property rights, and not Apple, will be solely responsible for the investigation, defense, settlement and discharge or any such intellectual property infringement claims. \n \n15. APPLICABLE LAW \nThis license agreement is governed by the laws of the Netherlands excluding its conflicts of law rules. \n \n16. MISCELLANEOUS \n16.1 If any of the terms of this agreement should be or become invalid, the validity of the remaining provisions shall not be affected. Invalid terms will be replaced by valid ones formulated in a way that will achieve the primary purpose. \n16.2 Collateral agreements, changes and amendments are only valid if laid down in writing. The preceding clause can only be waived in writing.</string>
    <string name="techsupport_group4_nl">techsupport@group4.nl</string>
    <string name="actionCodeRequired">Activation Code is required</string>
    <string name="first_step">first step</string>
    <string name="next">next</string>
    <string name="password">PASSWORD</string>
    <string name="request_your_account">REQUEST YOUR ACCOUNT</string>
    <string name="activation_code_and_or_birthday_are_incorrect_n_please_try_again">Activation code and/or Birthday are incorrect. \n Please, try again</string>
    <string name="_000000000">#000000000</string>
    <string name="verify_button">VERIFY</string>
    <string name="if_you_don_t_have_a_code_please_refer_back_to_nyour_health_care_provider">If you don\'t have a code, please refer back to \nyour health care provider.</string>
    <string name="pick_a_date">pick a date</string>
    <string name="registration_code">REGISTRATION CODE</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password_placeholder">* * * * * </string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="email_and_or_password_are_incorrect_n_please_try_again">Email and/or Password are incorrect. \n Please, try again</string>
    <string name="previous_button">previous button</string>
    <string name="in_which_stage_of_asthma_are_you_in">In which stage of asthma are you in?*</string>
    <string name="i_m_not_sure">I\'m not sure</string>
    <string name="intermittent">Intermittent</string>
    <string name="mild_persistent">Mild persistent</string>
    <string name="moderate_persistent">Moderate persistent</string>
    <string name="severe_persistent">Severe persistent</string>
    <string name="consult_your_care_provider_if_you_don_t_know_it_and_change_it_later">*Consult your care provider if you don\'t know it and change it later</string>
</resources>