<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/background_register"
            android:layout_width="514dp"
            android:layout_height="770dp"
            android:contentDescription="@string/background"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_background" />

        <androidx.cardview.widget.CardView
            android:id="@+id/register_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorWhite"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/request_your_account"
                    android:textAppearance="@style/Roboto16Regular" />

                <TextView
                    android:id="@+id/error_bad_credentials_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/activation_code_and_or_birthday_are_incorrect_n_please_try_again"
                    android:textAppearance="@style/Roboto16RegularRed"
                    android:visibility="gone" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/registration_code"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/Roboto14Black" />

                <EditText
                    android:id="@+id/activation_code"
                    android:layout_width="279dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/_000000000"
                    android:inputType="textShortMessage"
                    android:paddingStart="20dp"
                    android:selectAllOnFocus="true"
                    tools:ignore="Autofill,RtlSymmetry" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/birthday"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/Roboto14Black" />
                <TextView
                    android:id="@+id/birthDay"
                    android:layout_width="279dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:textAppearance="@style/Roboto16Regular"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/pick_a_date"
                    android:textAlignment="textStart"
                    android:nextFocusDown="@id/verify"
                    android:paddingStart="20dp"
                    android:clickable="true"
                    tools:ignore="Autofill,RtlSymmetry"
                    android:focusable="true" />

                <Button
                    android:id="@+id/verify"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/colorBlue"
                    android:text="@string/verify_button"
                    android:textAppearance="@style/Roboto16RegularWhite"
                    app:layout_constraintVertical_bias="0.2" />

                <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:nextFocusDown="@id/register"
                    android:text="@string/if_you_don_t_have_a_code_please_refer_back_to_nyour_health_care_provider"
                    android:textAppearance="@style/Roboto12RegularGrey" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/for_troubleshooting_contact"
                        android:textAppearance="@style/Roboto12RegularGrey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/techsupport_group4_nl"
                        android:textAppearance="@style/Roboto12Blue"
                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/loading_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />
</RelativeLayout>